--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
 		"not IE 10"
 	],
 	"dependencies": {
-		"@ant-design/icons": "^4.1.0",
+		"@ant-design/icons": "4.1.0",
 		"@babel/cli": "^7.8.3",
 		"@babel/core": "^7.8.3",
 		"@babel/node": "^7.8.3",
@@ -31,8 +31,8 @@
 		"@babel/preset-env": "^7.8.3",
 		"@babel/preset-react": "^7.8.3",
 		"@babel/runtime": "^7.8.3",
-		"antd": "^4.2.0",
-		"auth0-js": "9.12.2",
+		"antd": "4.2.0",
+		"auth0-js": "9.13.4",
 		"autoprefixer": "9.7.4",
 		"babel-loader": "8.0.6",
 		"babel-plugin-dynamic-import-node": "2.3.0",
